[gd_scene load_steps=10 format=3 uid="uid://d2qqalncnqbw2"]

[ext_resource type="Script" uid="uid://bpaeic35r2ypu" path="res://Scripts/Elementos/cambiador_personaje.gd" id="1_e2ox0"]
[ext_resource type="LabelSettings" uid="uid://b1ywkn2uu61ot" path="res://Scenes/UI/UI_laber_settings/granjero.tres" id="3_0se2p"]
[ext_resource type="Texture2D" uid="uid://kybvbrj0wynp" path="res://Sprites/Vikingo/vikingo_idle-Sheet.png" id="3_e2ox0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2ox0"]
size = Vector2(175, 80)

[sub_resource type="CircleShape2D" id="CircleShape2D_ocndg"]
radius = 36.0139

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ocndg"]
a = Vector2(54, 30)
b = Vector2(54, -51)

[sub_resource type="Animation" id="Animation_f3iej"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_qj1fi"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 1, 1, 1, 1, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eil5g"]
_data = {
&"RESET": SubResource("Animation_f3iej"),
&"idle": SubResource("Animation_qj1fi")
}

[node name="Cambiador_Personaje" type="Node2D"]
script = ExtResource("1_e2ox0")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-45.5, -13)
shape = SubResource("RectangleShape2D_e2ox0")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -56.0
offset_top = -40.0
offset_right = 64.0
offset_bottom = -32.0
text = "npc_granjero"
label_settings = ExtResource("3_0se2p")

[node name="Area2DCambiar" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DCambiar"]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_ocndg")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Limite" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("SegmentShape2D_ocndg")

[node name="Vikingo" type="Sprite2D" parent="."]
position = Vector2(0, 7)
texture = ExtResource("3_e2ox0")
hframes = 6
frame = 1
region_rect = Rect2(10, 10, 32, 32)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Vikingo"]
libraries = {
&"": SubResource("AnimationLibrary_eil5g")
}

[node name="Area2DRecargarVidaBarra" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DRecargarVidaBarra"]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_ocndg")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2DCambiar" to="." method="_on_area_2d_cambiar_body_entered"]
[connection signal="body_entered" from="Area2DRecargarVidaBarra" to="." method="_on_area_2d_recargar_vida_barra_body_entered"]
